--- a/cpt/src/Makefile
+++ b/cpt/src/Makefile
@@ -121,12 +121,12 @@ $(RATP): $(GDSL_STATIC) $(OBJECTS) $(RATPOBJECTS)
 $(LIB): dae.h $(GDSL_STATIC) $(OBJECTS) $(YOBJECTS) $(LIBOBJECTS)
 	cp dae.h $(LIBINCDIR)/dae.h
 	cp $(GDSL_STATIC) $@
-	$(AR) rcs $@ $(OBJECTS) $(LIBOBJECTS)
+	$(AR) rcs $@ $(OBJECTS) $(YOBJECTS) $(LIBOBJECTS)
 
 $(MTLIB): dae.h $(GDSL_STATIC) $(OBJECTS) $(MTYOBJECTS) $(LIBOBJECTS)
 	cp dae.h $(LIBINCDIR)/dae.h
 	cp $(GDSL_STATIC) $@
-	$(AR) rcs $@ $(OBJECTS) $(LIBOBJECTS)
+	$(AR) rcs $@ $(OBJECTS) $(MTYOBJECTS) $(LIBOBJECTS)
 
 $(BISON_GEN): $(BISON_SOURCES)
 	$(BISON) $(BISON_SOURCES)
