now 'make' in cpt/src produces both versions (cpt and libcpt.a for sequential yahsp, and cpt-mt and libcpt-mt.a for multi-thread version).
added a target in dae CMakeLists to build the multi-thread version of dae (dae-mt).

--- a/cpt/src/Makefile
+++ b/cpt/src/Makefile
@@ -84,13 +84,15 @@ STATIC_LIBS = $(GDSL_STATIC)
 
 .PHONY : all pp ratp dep clean distclean win
 
-all: lib exe
+all: lib exe mtlib mt
 
 exe: $(EXE) 
 
-mt:  $(MTLIB) $(MTEXE) 
+mt:  $(MTEXE) 
 
 lib: $(LIB)
+
+mtlib: $(MTLIB)
 
 pp: CC = g++
 pp: exe
