clean the build chain for IPC submission scripts

--- a/dae/CMakeLists.txt
+++ b/dae/CMakeLists.txt
@@ -14,14 +14,14 @@ PROJECT(DAEX CXX)
 
 # include the sources
 
-INCLUDE_DIRECTORIES(${PARADISEO_EO_SRC_DIR}/src)
+INCLUDE_DIRECTORIES(${EO_SRC_DIR})
 INCLUDE_DIRECTORIES(${CPT_SRC_DIR})
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
 
 
 # where CMake can find the libraries
 
-LINK_DIRECTORIES(${PARADISEO_EO_BIN_DIR}/lib)
+LINK_DIRECTORIES(${EO_BIN_DIR}/lib)
 LINK_DIRECTORIES(${CPT_LIB_DIR})
 
 SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPAPERVERSION -fopenmp" )
