--- a/scripts/build
+++ b/scripts/build
@@ -20,7 +20,7 @@ cat install-dist.cmake | sed "s,<<PATH_TO_EO>>,$here/eo," > install.tmp
 cat install.tmp | sed "s,<<PATH_TO_CPT>>,$here/dae_yahsp/cpt," > install.cmake
 ./make_ipc.sh
 
-cp ./ipc/dae $here
+cp ./ipc/dae $here/dae_yahsp
 
 cd $here
 
