--- a/scripts/build
+++ b/scripts/build
@@ -3,11 +3,11 @@
 here=`pwd`
 
 echo "BUILD GDSL"
-cd $here/dae_yahsp/cpt/src/gdsl/
+cd $here/daeyahsp/cpt/src/gdsl/
 ./configure && make
 
 echo "BUILD YAHSP"
-cd $here/dae_yahsp/cpt/src/
+cd $here/daeyahsp/cpt/src/
 make
 
 echo "BUILD EO"
@@ -15,11 +15,12 @@ cd $here/eo
 ./build_gcc_linux_release
 
 echo "BUILD DAE"
-cd $here/dae_yahsp/dae
+cd $here/daeyahsp/dae
 cat install-dist.cmake | sed "s,<<PATH_TO_EO>>,$here/eo," > install.tmp
-cat install.tmp | sed "s,<<PATH_TO_CPT>>,$here/dae_yahsp/cpt," > install.cmake
+cat install.tmp | sed "s,<<PATH_TO_CPT>>,$here/daeyahsp/cpt," > install.cmake
 ./make_ipc.sh
 
+echo "COPY THE BINARY"
 cp ./ipc/dae $here/dae_yahsp
 
 cd $here
