Stream bug and warnings corrected, with the help of Caner

--- a/dae/CMakeLists.txt
+++ b/dae/CMakeLists.txt
@@ -24,6 +24,9 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
 LINK_DIRECTORIES(${EO_BIN_DIR}/lib)
 LINK_DIRECTORIES(${CPT_LIB_DIR})
 
+#ADD_DEFINITIONS(-W -Wall -Werror)
+ADD_DEFINITIONS(-W -Wall -pedantic)
+
 SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPAPERVERSION -fopenmp" )
 SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG -fopenmp" )
 
