--- a/dae/CMakeLists.txt
+++ b/dae/CMakeLists.txt
@@ -25,7 +25,8 @@ LINK_DIRECTORIES(${EO_BIN_DIR}/lib)
 LINK_DIRECTORIES(${CPT_LIB_DIR})
 
 #ADD_DEFINITIONS(-W -Wall -Werror)
-ADD_DEFINITIONS(-W -Wall -pedantic)
+#ADD_DEFINITIONS(-W -Wall -pedantic)
+ADD_DEFINITIONS(-W -Wall)
 
 SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPAPERVERSION -fopenmp" )
 SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG -fopenmp" )
