small lifting + compilation option for shared memoization :
make -> no shared memoization (all threads have their own memoization)

make shared -> one single memoization with critical sections (best option if scalability wrt number of threads is good)

--- a/cpt/src/Makefile
+++ b/cpt/src/Makefile
@@ -86,6 +86,9 @@ STATIC_LIBS = $(GDSL_STATIC)
 all: CPPFLAGS += -DDAE
 all: nodae
 
+shared: CPPFLAGS += -DSHARED_MEMOIZATION
+shared: all
+
 nodae: lib mtlib exe  mt
 
 exe: $(EXE) 
