* GECCO2011 report: added section implementation eo and openmp

--- a/papers/GECCO2011/dae_mt/CMakeLists.txt
+++ b/papers/GECCO2011/dae_mt/CMakeLists.txt
@@ -1,6 +1,6 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-PROJECT(dae_mt)
+PROJECT(dae_mt NONE)
 
 SET(LATEX_COMPILER_FLAGS "-interaction=nonstopmode --enable-write18" CACHE STRING "Flags passed to latex.")
 
@@ -10,4 +10,4 @@ INCLUDE(${CMAKE_MODULE_PATH}/UseLATEX.cmake)
 SET(SOURCE_INPUTS
   )
 
-ADD_LATEX_DOCUMENT(${PROJECT_NAME}.tex INPUTS ${SOURCE_INPUTS} IMAGE_DIRS images DEFAULT_PDF)
+ADD_LATEX_DOCUMENT(${PROJECT_NAME}.tex BIBFILES dae_mt.bib INPUTS ${SOURCE_INPUTS} IMAGE_DIRS images DEFAULT_PDF)
