--- a/dae/CMakeLists.txt
+++ b/dae/CMakeLists.txt
@@ -51,6 +51,9 @@ SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG -fopenmp" 
 ADD_EXECUTABLE(dae dae.cpp) 
 ADD_DEPENDENCIES(dae daex)
 
+ADD_EXECUTABLE(featureselector featureselector.cpp)
+ADD_DEPENDENCIES(featureselector daex)
+
 ADD_EXECUTABLE(dae-mt dae.cpp) 
 ADD_DEPENDENCIES(dae-mt daex)
 
@@ -66,6 +69,7 @@ ADD_DEPENDENCIES(test_stats daex)
 # link librairies for the executable
 
 TARGET_LINK_LIBRARIES(dae eoutils daex cpt gmp eo gcov) 
+TARGET_LINK_LIBRARIES(featureselector daex cpt gmp eoutils) 
 TARGET_LINK_LIBRARIES(dae-mt eoutils daex cpt-mt gmp eo gcov) 
 TARGET_LINK_LIBRARIES(test_chronopartition eoutils daex cpt gmp eo gcov) 
 TARGET_LINK_LIBRARIES(test_b_max eoutils daex cpt gmp eo gcov) 
