* dae: cmake config files updated to generate all kinds of dae binaries we need for our experiences

--- a/dae/CMakeLists.txt
+++ b/dae/CMakeLists.txt
@@ -1,82 +1,86 @@
-cmake_minimum_required(VERSION 2.4)
+cmake_minimum_required(VERSION 2.8)
 
 if(COMMAND cmake_policy)
-      cmake_policy(SET CMP0003 NEW)
+  cmake_policy(SET CMP0003 NEW)
 endif(COMMAND cmake_policy)
-
 
 # include the install configuration file where are defined the main variables
 INCLUDE(${CMAKE_SOURCE_DIR}/install.cmake)
 
-ENABLE_LANGUAGE(C)
-ENABLE_LANGUAGE(CXX)
-
 # define project name
-PROJECT(DAEX CXX)
+PROJECT(DAEX)
+
+# include useful features for cmake
+SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
 
 FIND_PACKAGE(OpenMP REQUIRED)
+FIND_PACKAGE(GDSL REQUIRED)
 
 IF(OPENMP_FOUND)
-  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+  SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 ENDIF()
 
 # include the sources
-
-INCLUDE_DIRECTORIES(${EO_SRC_DIR})
-INCLUDE_DIRECTORIES(${CPT_SRC_DIR})
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
-
+INCLUDE_DIRECTORIES(
+  ${EO_SRC_DIR}
+  ${CPT_SRC_DIR}
+  ${YAHSP_SRC_DIR}
+  ${GDSL_INCLUDE_DIR}
+  ${CMAKE_SOURCE_DIR}/src
+  )
 
 # where CMake can find the libraries
+LINK_DIRECTORIES(
+  ${EO_BIN_DIR}/lib
+  ${CPT_LIB_DIR}
+  ${YAHSP_BIN_DIR}/lib
+  )
 
-LINK_DIRECTORIES(${EO_BIN_DIR}/lib)
-LINK_DIRECTORIES(${CPT_LIB_DIR})
-
-#ADD_DEFINITIONS(-W -Wall -Werror)
-#ADD_DEFINITIONS(-W -Wall -pedantic)
+# flags to use with compiler
 ADD_DEFINITIONS(-W -Wall)
 
-# SET( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DPAPERVERSION -fopenmp" )
-SET( CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG -fopenmp" )
+IF (CMAKE_BUILD_TYPE MATCHES Debug)
+  #ADD_DEFINITIONS(-DPAPERVERSION)
+  ADD_DEFINITIONS(-pg -g)
+ELSE()
+  ADD_DEFINITIONS(-O3 -DNDEBUG)
+ENDIF()
 
-# make a static exe
-# FIXME this is a ugly ha as it assume that the linker is gcc-compatible
-# there must be a more elegant way to do that with CMake, maybe with:
-# LINK_SEARCH_END_STATIC ?
-#SET(CMAKE_EXE_LINKER_FLAGS "-fopenmp")
+# target + link libraries
+LINK_LIBRARIES(eoutils daex gmp eo gcov ${GDSL_LIBRARY} yahsp_library-common)
 
-# target
-
-ADD_EXECUTABLE(dae dae.cpp) 
+ADD_EXECUTABLE(dae dae.cpp)
 ADD_DEPENDENCIES(dae daex)
+TARGET_LINK_LIBRARIES(dae yahsp_library-dae)
+
+ADD_EXECUTABLE(dae-sm dae.cpp)
+ADD_DEPENDENCIES(dae-sm daex)
+TARGET_LINK_LIBRARIES(dae-sm yahsp_library-sm)
+
+ADD_EXECUTABLE(dae-mt dae.cpp)
+ADD_DEPENDENCIES(dae-mt daex)
+TARGET_LINK_LIBRARIES(dae-mt yahsp_library-mt)
+
+ADD_EXECUTABLE(dae-mt-sm dae.cpp)
+ADD_DEPENDENCIES(dae-mt-sm daex)
+TARGET_LINK_LIBRARIES(dae-mt-sm yahsp_library-mt-sm)
+
+ADD_EXECUTABLE(test_chronopartition test_chronopartition.cpp)
+ADD_DEPENDENCIES(test_chronopartition daex)
+TARGET_LINK_LIBRARIES(test_chronopartition yahsp_library-dae)
+
+ADD_EXECUTABLE(test_b_max test_b_max.cpp)
+ADD_DEPENDENCIES(test_b_max daex)
+TARGET_LINK_LIBRARIES(test_b_max yahsp_library-dae)
+
+ADD_EXECUTABLE(test_stats test_stats.cpp)
+ADD_DEPENDENCIES(test_stats daex)
+TARGET_LINK_LIBRARIES(test_stats yahsp_library-dae)
 
 ADD_EXECUTABLE(featureselector featureselector.cpp)
 ADD_DEPENDENCIES(featureselector daex)
-
-ADD_EXECUTABLE(dae-mt dae.cpp) 
-ADD_DEPENDENCIES(dae-mt daex)
-
-ADD_EXECUTABLE(test_chronopartition test_chronopartition.cpp) 
-ADD_DEPENDENCIES(test_chronopartition daex)
-
-ADD_EXECUTABLE(test_b_max test_b_max.cpp) 
-ADD_DEPENDENCIES(test_b_max daex)
-
-ADD_EXECUTABLE(test_stats test_stats.cpp) 
-ADD_DEPENDENCIES(test_stats daex)
-
-# link librairies for the executable
-
-TARGET_LINK_LIBRARIES(dae eoutils daex cpt gmp eo gcov) 
-TARGET_LINK_LIBRARIES(featureselector daex cpt gmp eoutils) 
-TARGET_LINK_LIBRARIES(dae-mt eoutils daex cpt-mt gmp eo gcov) 
-TARGET_LINK_LIBRARIES(test_chronopartition eoutils daex cpt gmp eo gcov) 
-TARGET_LINK_LIBRARIES(test_b_max eoutils daex cpt gmp eo gcov) 
-TARGET_LINK_LIBRARIES(test_stats eoutils daex cpt gmp eo gcov) 
-
+TARGET_LINK_LIBRARIES(featureselector yahsp_library-dae)
 
 # process to sources
-
-SUBDIRS(src)
-
+ADD_SUBDIRECTORY(src)
