--- a/cpt-yahsp/application/ratp/CMakeLists.txt
+++ b/cpt-yahsp/application/ratp/CMakeLists.txt
@@ -15,8 +15,8 @@ SET(SOURCES
 LINK_LIBRARIES(${X11_LIBRARIES})
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
-ADD_DEPENDENCIES(${PROJECT_NAME} yahsp_library-common yahsp_library-dae)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} yahsp_library)
+ADD_DEPENDENCIES(${PROJECT_NAME} cpt_yahsp_library-common cpt_yahsp_library-dae)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} cpt_yahsp_library)
 
 SET_TARGET_PROPERTIES(
   ${PROJECT_NAME}
