--- a/cpt-yahsp/application/yahsp/CMakeLists.txt
+++ b/cpt-yahsp/application/yahsp/CMakeLists.txt
@@ -1,28 +1,28 @@
-PROJECT(yahsp CXX)
+PROJECT(cpt_yahsp CXX)
 
 SET(SOURCES
   main.cpp
   )
 
 ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
-ADD_DEPENDENCIES(${PROJECT_NAME} yahsp_library-common yahsp_library-dae)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} yahsp_library-dae)
+ADD_DEPENDENCIES(${PROJECT_NAME} cpt_yahsp_library-common cpt_yahsp_library-dae)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} cpt_yahsp_library-dae)
 
 ADD_EXECUTABLE(${PROJECT_NAME}-mt ${SOURCES})
-ADD_DEPENDENCIES(${PROJECT_NAME}-mt yahsp_library-common yahsp_library-mt)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME}-mt yahsp_library-mt)
+ADD_DEPENDENCIES(${PROJECT_NAME}-mt cpt_yahsp_library-common cpt_yahsp_library-mt)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME}-mt cpt_yahsp_library-mt)
 
 ADD_EXECUTABLE(${PROJECT_NAME}-sm ${SOURCES})
-ADD_DEPENDENCIES(${PROJECT_NAME}-sm yahsp_library-common yahsp_library-sm)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME}-sm yahsp_library-sm)
+ADD_DEPENDENCIES(${PROJECT_NAME}-sm cpt_yahsp_library-common cpt_yahsp_library-sm)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME}-sm cpt_yahsp_library-sm)
 
 ADD_EXECUTABLE(${PROJECT_NAME}-mt-sm ${SOURCES})
-ADD_DEPENDENCIES(${PROJECT_NAME}-mt-sm yahsp_library-common yahsp_library-mt-sm)
-TARGET_LINK_LIBRARIES(${PROJECT_NAME}-mt-sm yahsp_library-mt-sm)
+ADD_DEPENDENCIES(${PROJECT_NAME}-mt-sm cpt_yahsp_library-common cpt_yahsp_library-mt-sm)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME}-mt-sm cpt_yahsp_library-mt-sm)
 
 # ADD_EXECUTABLE(${PROJECT_NAME}-wct ${SOURCES})
-# ADD_DEPENDENCIES(${PROJECT_NAME}-wct yahsp_library-wct)
-# TARGET_LINK_LIBRARIES(${PROJECT_NAME}-wct yahsp_library-wct)
+# ADD_DEPENDENCIES(${PROJECT_NAME}-wct cpt_yahsp_library-wct)
+# TARGET_LINK_LIBRARIES(${PROJECT_NAME}-wct cpt_yahsp_library-wct)
 
 SET_TARGET_PROPERTIES(
   ${PROJECT_NAME}
