+ added global cmake building files

--- a/cpt-yahsp/CMakeLists.txt
+++ b/cpt-yahsp/CMakeLists.txt
@@ -23,7 +23,7 @@ INCLUDE_DIRECTORIES(
 ADD_DEFINITIONS(-O3 -Wall -g)
 
 SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
-SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
+SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
 
 # process to sources
 ADD_SUBDIRECTORY(src)
