--- a/papers/GECCO2011/dae_mt/CMakeLists.txt
+++ b/papers/GECCO2011/dae_mt/CMakeLists.txt
@@ -10,4 +10,6 @@ INCLUDE(${CMAKE_MODULE_PATH}/UseLATEX.cmake)
 SET(SOURCE_INPUTS
   )
 
-ADD_LATEX_DOCUMENT(${PROJECT_NAME}.tex BIBFILES dae_mt.bib INPUTS ${SOURCE_INPUTS} IMAGE_DIRS images DEFAULT_PDF)
+ADD_LATEX_DOCUMENT(${PROJECT_NAME}.tex
+#BIBFILES dae_mt.bib
+INPUTS ${SOURCE_INPUTS} IMAGE_DIRS images DEFAULT_PDF)
