Modifications importantes des CMakeFiles. Tous ce qui concerne GDSL est maintenant dans cpt_yahsp : dans DAE il ne reste que le link gdsl.
Bug de IPC7 corrigé par construction correcte de plans séquentiels dans yahsp (i.e. avec un init correct).

--- a/cpt-yahsp/CMakeLists.txt
+++ b/cpt-yahsp/CMakeLists.txt
@@ -1,30 +1,22 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-ENABLE_LANGUAGE(CXX)
-
-# include the install configuration file where are defined the main variables
 INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/install.cmake OPTIONAL)
 
-# define project name
-PROJECT(cpt_yahsp_library)
+ENABLE_LANGUAGE(C CXX)
 
-# include useful features for cmake
-SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
+PROJECT(cpt_yahsp_library)
 
 FIND_PACKAGE(OpenMP)
 
-# include the sources
+ADD_DEFINITIONS(-O2 -Wall -g)
+
 INCLUDE_DIRECTORIES(
-  ${CMAKE_CURRENT_SOURCE_DIR}
   ${CMAKE_CURRENT_SOURCE_DIR}/src
   )
 
-# flags to use with compiler
-ADD_DEFINITIONS(-O3 -Wall -g)
-
 SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
-SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_BINARY_DIR})
+SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 
-# process to sources
+ADD_SUBDIRECTORY(gdsl)
 ADD_SUBDIRECTORY(src)
 ADD_SUBDIRECTORY(application)
