--- a/cpt-yahsp/application/CMakeLists.txt
+++ b/cpt-yahsp/application/CMakeLists.txt
@@ -1,10 +1,2 @@
-FIND_PACKAGE(GDSL REQUIRED)
-
-INCLUDE_DIRECTORIES(
-  ${GDSL_INCLUDE_DIR}
-  )
-
-LINK_LIBRARIES(m gmp cpt_yahsp_library-common)
-
-ADD_SUBDIRECTORY(cpt-yahsp)
+ADD_SUBDIRECTORY(yahsp)
 #ADD_SUBDIRECTORY(ratp)
