--- a/dae/src/CMakeLists.txt
+++ b/dae/src/CMakeLists.txt
@@ -23,3 +23,11 @@ SET (DAEX_SOURCES
   )
 
 ADD_LIBRARY(daex STATIC ${DAEX_SOURCES})
+ADD_LIBRARY(daex-yahsp-mt STATIC ${DAEX_SOURCES})
+
+SET_TARGET_PROPERTIES(
+  daex-yahsp-mt
+  PROPERTIES 
+  COMPILE_FLAGS "-DYAHSP_MT"
+  )
+
