--- a/cpt-yahsp/src/CMakeLists.txt
+++ b/cpt-yahsp/src/CMakeLists.txt
@@ -1,4 +1,13 @@
+FIND_PACKAGE(BISON REQUIRED)
+FIND_PACKAGE(FLEX REQUIRED)
+
+BISON_TARGET(Parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.cpp)
+FLEX_TARGET(Scanner parser.lex ${CMAKE_CURRENT_BINARY_DIR}/parser.yy.cpp)
+ADD_FLEX_BISON_DEPENDENCY(Scanner Parser)
+
 SET(SOURCES
+  ${BISON_Parser_OUTPUTS} 
+  ${FLEX_Scanner_OUTPUTS}
   pddl.cpp
   instantiation.cpp
   var.cpp
@@ -17,46 +26,72 @@ SET(SOURCES
   solve.cpp
   )
 
-SET(YSOURCES yahsp-seq.cpp)
-SET(MTYSOURCES yahsp-mt.cpp)
+SET(SEQ_SOURCES yahsp-seq.cpp)
+SET(MT_SOURCES yahsp-mt.cpp)
+SET(MPI_SOURCES yahsp-mpi.cpp)
+SET(DAE_SOURCES yahsp-dae.cpp)
 
-FIND_PACKAGE(BISON REQUIRED)
-FIND_PACKAGE(FLEX REQUIRED)
+LINK_LIBRARIES(gdsl gmp)
 
-BISON_TARGET(MyParser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.cpp)
-FLEX_TARGET(MyScanner parser.lex ${CMAKE_CURRENT_BINARY_DIR}/parser.yy.cpp)
-ADD_FLEX_BISON_DEPENDENCY(MyScanner MyParser)
+ADD_LIBRARY(${PROJECT_NAME}-common STATIC ${SOURCES})
+ADD_LIBRARY(${PROJECT_NAME} STATIC ${SEQ_SOURCES})
 
-ADD_LIBRARY(${PROJECT_NAME}-common STATIC ${BISON_MyParser_OUTPUTS} ${FLEX_MyScanner_OUTPUTS} ${SOURCES})
-ADD_LIBRARY(${PROJECT_NAME} STATIC ${YSOURCES})
-ADD_LIBRARY(${PROJECT_NAME}-sm STATIC ${YSOURCES})
-ADD_LIBRARY(${PROJECT_NAME}-mt STATIC ${MTYSOURCES})
-ADD_LIBRARY(${PROJECT_NAME}-mt-sm STATIC ${MTYSOURCES})
-ADD_LIBRARY(${PROJECT_NAME}-dae STATIC ${YSOURCES})
-# ADD_LIBRARY(${PROJECT_NAME}-wct STATIC ${BISON_MyParser_OUTPUTS} ${FLEX_MyScanner_OUTPUTS} ${SOURCES} ${YSOURCES})
 
 SET_TARGET_PROPERTIES(
   ${PROJECT_NAME}-common
   ${PROJECT_NAME}
-  ${PROJECT_NAME}-mt
-  ${PROJECT_NAME}-dae
   PROPERTIES
-  COMPILE_FLAGS "${OpenMP_C_FLAGS}"
+  COMPILE_FLAGS ""
   )
 
-SET_TARGET_PROPERTIES(
-  ${PROJECT_NAME}-sm
-  ${PROJECT_NAME}-mt-sm
-  PROPERTIES
-  COMPILE_FLAGS "${OpenMP_C_FLAGS} -DDAE -DSHARED_MEMOIZATION"
-  )
+if (MPI)
 
-SET_TARGET_PROPERTIES(
-  ${PROJECT_NAME}-dae
-  PROPERTIES COMPILE_FLAGS "${OpenMP_C_FLAGS} -DDAE"
-  )
+  ADD_LIBRARY(${PROJECT_NAME}-common-mpi STATIC ${SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-mpi STATIC ${MT_SOURCES} ${MPI_SOURCES})
 
-# SET_TARGET_PROPERTIES(
-#   ${PROJECT_NAME}-wct
-#   PROPERTIES COMPILE_FLAGS "${OpenMP_C_FLAGS} -DWALLCLOCK_TIME"
-#   )
+  SET_TARGET_PROPERTIES(
+    ${PROJECT_NAME}-common-mpi
+    ${PROJECT_NAME}-mpi
+    PROPERTIES
+    COMPILE_FLAGS "-DYAHSP_MPI"
+    )
+
+endif()
+  
+if (OPENMP_FOUND)
+
+  ADD_LIBRARY(${PROJECT_NAME}-common-omp STATIC ${SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-mt STATIC ${MT_SOURCES})
+
+  SET_TARGET_PROPERTIES(
+    ${PROJECT_NAME}-common-omp
+    ${PROJECT_NAME}-mt
+    PROPERTIES
+    COMPILE_FLAGS "${OpenMP_C_FLAGS} -DYAHSP_MT"
+    )
+
+  ADD_LIBRARY(${PROJECT_NAME}-common-dae-omp STATIC ${SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-dae STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-dae-sm STATIC ${SEQ_SOURCES} ${DAE_SOURCES})
+  ADD_LIBRARY(${PROJECT_NAME}-dae-mt STATIC ${SOURCES} ${MT_SOURCES} ${DAE_SOURCES})
+
+  SET_TARGET_PROPERTIES(
+    ${PROJECT_NAME}-common-dae-omp
+    ${PROJECT_NAME}-dae
+    PROPERTIES 
+    COMPILE_FLAGS "${OpenMP_C_FLAGS} -DDAE"
+    )
+
+  SET_TARGET_PROPERTIES(
+    ${PROJECT_NAME}-dae-mt
+    PROPERTIES 
+    COMPILE_FLAGS "${OpenMP_C_FLAGS} -DDAE -DYAHSP_MT -DSHARED_MEMOIZATION"
+    )
+
+  SET_TARGET_PROPERTIES(
+    ${PROJECT_NAME}-dae-sm
+    PROPERTIES
+    COMPILE_FLAGS "${OpenMP_C_FLAGS} -DDAE -DSHARED_MEMOIZATION"
+    )
+
+endif()
